Closed Bug 1668840 Opened 4 years ago Closed 4 years ago

Can't allocate a RGB image without a PImageBridge

Categories

(Core :: Graphics, defect)

defect

Tracking

()

RESOLVED FIXED
83 Branch
Tracking Status
firefox83 --- fixed

People

(Reporter: jya, Assigned: jya)

References

Details

Attachments

(2 files, 1 obsolete file)

Currently, the code in the ImageContainer to allocated a SharedRGBImage checks that the ImageContainer has an image client set.

In the RDD process, this will never be true.

We need something similar to what was done for the SharedPlanarYCbCrImage object, one that can work with a TextureClientRecycleAllocator.

Assignee: nobody → jyavenard

call unbindTextureSource and NotifyNotUsed on wrapped texture.

Depends on D92361

Attachment #9179496 - Attachment description: Bug 1668840 - P2. Allow libvpx with alpha plane decoding in RDD process. r?mattwoodrow → Bug 1668840 - P3. Allow libvpx with alpha plane decoding in RDD process. r?mattwoodrow

Comment on attachment 9179496 [details]
Bug 1668840 - P3. Allow libvpx with alpha plane decoding in RDD process. r?mattwoodrow

Revision D92362 was moved to bug 1595994. Setting attachment 9179496 [details] to obsolete.

Attachment #9179496 - Attachment is obsolete: true
Pushed by jyavenard@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/b116e6bc21d5
P1. Add SharedRGBImage constructor for TextureClientRecycleAllocator. r=mattwoodrow
https://hg.mozilla.org/integration/autoland/rev/90379fc1e6eb
P2. Fix GPUVideoTextureHost and renable recycle allocator with OGL. r=mattwoodrow
Status: NEW → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 83 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: