Bug 1668840 - P1. Add SharedRGBImage constructor for TextureClientRecycleAllocator. r=mattwoodrow

Differential Revision: https://phabricator.services.mozilla.com/D92361